// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(View) DogsView does not render the LoadMore component if showLoadMore is falsy 1`] = `
<div
  className="dogs-container"
>
  <Header
    className="dog-breeds-header"
  >
    <h1>
      Dog Breeds
    </h1>
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
  </Header>
  <Connect(DogsBreedSearchContainer) />
  <Connect(DogsBreedContainer)
    dogs={Array []}
    isLoading={false}
  />
  <Separator
    type="horizontal"
  />
  <Header
    className="favorites-header"
  >
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
    <h1>
      Favorites
    </h1>
  </Header>
  <Connect(DogsBreedContainer)
    dogs={Array []}
  />
</div>
`;

exports[`(View) DogsView does not render the favorite dogs component if isLoading is true 1`] = `
<div
  className="dogs-container"
>
  <Header
    className="dog-breeds-header"
  >
    <h1>
      Dog Breeds
    </h1>
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
  </Header>
  <Connect(DogsBreedSearchContainer) />
  <Connect(DogsBreedContainer)
    dogs={Array []}
    isLoading={true}
  />
  <Separator
    type="horizontal"
  />
  <Header
    className="favorites-header"
  >
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
    <h1>
      Favorites
    </h1>
  </Header>
</div>
`;

exports[`(View) DogsView renders dogs view component 1`] = `
<div
  className="dogs-container"
>
  <Header
    className="dog-breeds-header"
  >
    <h1>
      Dog Breeds
    </h1>
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
  </Header>
  <Connect(DogsBreedSearchContainer) />
  <Connect(DogsBreedContainer)
    dogs={Array []}
    isLoading={false}
  />
  <Separator
    type="horizontal"
  />
  <Header
    className="favorites-header"
  >
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
    <h1>
      Favorites
    </h1>
  </Header>
  <Connect(DogsBreedContainer)
    dogs={Array []}
  />
</div>
`;

exports[`(View) DogsView renders the LoadMore component if showLoadMore is truthy 1`] = `
<div
  className="dogs-container"
>
  <Header
    className="dog-breeds-header"
  >
    <h1>
      Dog Breeds
    </h1>
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
  </Header>
  <Connect(DogsBreedSearchContainer) />
  <Connect(DogsBreedContainer)
    dogs={Array []}
    isLoading={false}
  />
  <Connect(LoadMoreContainer) />
  <Separator
    type="horizontal"
  />
  <Header
    className="favorites-header"
  >
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
    <h1>
      Favorites
    </h1>
  </Header>
  <Connect(DogsBreedContainer)
    dogs={Array []}
  />
</div>
`;

exports[`(View) DogsView renders the favorite dogs component if isLoading is false 1`] = `
<div
  className="dogs-container"
>
  <Header
    className="dog-breeds-header"
  >
    <h1>
      Dog Breeds
    </h1>
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
  </Header>
  <Connect(DogsBreedSearchContainer) />
  <Connect(DogsBreedContainer)
    dogs={Array []}
    isLoading={false}
  />
  <Separator
    type="horizontal"
  />
  <Header
    className="favorites-header"
  >
    <Icon
      alt="red heart icon"
      icon="redHeartIcon"
    />
    <h1>
      Favorites
    </h1>
  </Header>
  <Connect(DogsBreedContainer)
    dogs={Array []}
  />
</div>
`;
